showing the race to the driver
